# rsprobe

./: .gitignore  Cargo.toml
src/: ffprobe.rs  lib.rs
tests/: test.rs
