[package]
name = "rsprobe"
description = "Wrapper around ffprobe's XML output"
version = "0.1.0"
authors = ["Stefan Rupertsberger <s.rupertsberger@gmail.com>"]
repository = "https://github.com/Stefan99353/rsprobe"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde-xml-rs = "0.4.1"
tokio = { version = "1.6.1", features = ["process", "rt", "macros"] }